<resources>
    <string name="app_name">MerchantApp</string>
    <string name="merchant">Merchant</string>
    <string name="category">Category</string>
    <string name="qty">Qty</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_pasword">Confirm Pasword</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
</resources>
