<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/merriweather_bold"
                android:text="@string/sign_up"
                android:textColor="@color/colorDark"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/input_merchant_name"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/merchant_name"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_first_name"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_last_name"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_email"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_password"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_confirm_password"
                    style="@style/EditTextStyle.Sign"
                    android:hint="@string/confirm_pasword"
                    android:inputType="textPassword"
                    tools:ignore="Autofill,TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_round"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="onRegister"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorLight"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onLogin"
                android:text="@string/sign_in" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>