<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textSize="24sp"
            android:fontFamily="@font/merriweather_bold"
            android:textColor="@color/colorDark"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,TextFields"
                style="@style/EditTextStyle.Sign" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill,TextFields"
                style="@style/EditTextStyle.Sign" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/colorLight"
            android:background="@drawable/btn_round"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="onRegister"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>