<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLight"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/colorLight" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <ProgressBar
            android:id="@+id/progress_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/primary_text_light"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="ProductName" />

    <include layout="@layout/info_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/description"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/btn_line"
                android:text="@string/delete"
                android:textColor="@color/colorGreenDark"
                android:textAllCaps="false"
                android:onClick="actionDelete"
                android:textSize="18sp"
                tools:ignore="ButtonStyle"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/btn_solid"
                android:textColor="@color/colorLight"
                android:text="@string/update"
                android:textAllCaps="false"
                android:onClick="actionUpdate"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <ScrollView
            android:layout_above="@+id/layout_option"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_detail_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="desc"
                android:textColor="@android:color/primary_text_light"
                android:fontFamily="@font/merriweather_regular"/>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>